# Libra

./: .gitignore  AGENT.md  AGENTS.md  README.md  SECURITY_OWNERSHIP.md  config.yaml  main.py  provid.zsh  pyproject.toml  run_preview.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/video_tools/: README.md  python-window.txt  requirements.txt
src/Libra/: main.py
src/Libra/core/: __init__.py  duplicate_finder.py  organizer.py  tools.py  video_metadata.py
src/Libra/gui/: main_window.py
src/Libra/video_tools/: __init__.py  __main__.py
src/Libra/video_tools/cli/: __init__.py  batch_processor.py
src/Libra/video_tools/core/: __init__.py  backend_utils.py  classifier.py
src/Libra/video_tools/gui/: __init__.py  apple_organizer.py  duplicate_finder.py  video_sorter.py
tests/: conftest.py  test_core_organizer_and_duplicates.py  test_home_navigation.py  test_pep508_identifiers.py  test_tool_sanitization_preview.py  test_video_tools_cli.py  test_video_tools_package.py
