[project]
name = "L!bra"
version = "0.1.1"
requires-python = ">=3.13"
dependencies = ["PySide6"]

[tool.ty.environment]
extra-paths = ["/Users/home/Library/Python/3.13/lib/python/site-packages"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "N802"]  # N802: Qt override methods must be camelCase
