[project]
name = "L!bra"
version = "0.1.4"
requires-python = ">=3.13"
dependencies = ["PySide6", "razorcore"]

[tool.uv.sources]
razorcore = { path = "../.razorcore", editable = true }

[tool.ty.environment]
extra-paths = [
    "src",
    "/Users/home/Library/Python/3.13/lib/python/site-packages",
    "/opt/homebrew/lib/python3.13/site-packages",
]

[tool.ty.analysis]
respect-type-ignore-comments = true
allowed-unresolved-imports = []

[tool.ty.src]
exclude = [
    ".agent/**",
    ".shared/**",
    ".ui-ux-pro-max/**",
    "src/Libra/core/video_metadata.py",
    "src/Libra/gui/main_window.py",
    "src/Libra/video_tools/**",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E9", "F"]
ignore = ["F401"]  # Temporary baseline while legacy modules are cleaned up
